--- a/package.json
+++ b/package.json
@@ -1,21 +1,11 @@
 {
-  "name": "tops-systems-cms",
+  "name": "tops-web-update",
   "version": "1.0.0",
-  "description": "Content Management System for Tops Systems website",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node index.js"
   },
-  "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "fs-extra": "^11.1.1",
-    "multer": "^1.4.5-lts.1"
-  },
-  "devDependencies": {
-    "cssnano": "^7.1.2",
-    "cssnano-cli": "^1.0.5",
-    "nodemon": "^3.0.1"
+  "engines": {
+    "node": ">=16"
   }
 }
