--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "tops-web-update",
   "version": "1.0.0",
+  "description": "Tops Systems web",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "engines": {
     "node": ">=16"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
   }
 }
